repair broke <br>

--- a/travel_salesman.ipynb
+++ b/travel_salesman.ipynb
@@ -27,16 +27,16 @@
    "source": [
     "<h3><center>Omówienie funkcji wykonujące pomniejsze czynności potrzebne do działania algorytmu</h3>\n",
     "<span style=\"font-size:15px\">\n",
-    "* <b>compute distance</b> - podaje odległość pomiędzy dwoma wybranymi miastami (punktami)\n",
-    "* <b>route_length</b> - oblicza sumaryczną długość trasy obranej przez 'komiwojażera'\n",
-    "* <b>calculate_fitness</b> - zwraca ujemną długość pokonanej przez 'sprzedawcę' trasy, która jest naszą funkcją celu do optymalizacji\n",
-    "* <b>plot_route</b> - przedstawia obraną trasę pomiędzy miastami (punktami) na wykresie\n",
-    "* <b>get_individual_route</b> - tworzy wektor z kolejnością odwiedzanych miast dla danego osobnika z populacji tzw. genotyp\n",
-    "* <b>initial_population</b> - zwraca populację (posortowną rosnąco względem funkcji celu) w której każdy osobnik ma swoją trasę przejścia pomiędzy miastami\n",
-    "* <b>get_parents</b> - wybiera najlepsze osobniki z populacji (z największą funkcją celu) na rodziców, po których potomstwo odziedziczy geny (kolejność odwiedzania miast)\n",
-    "* <b>cross</b> - fragmenty genów rodziców są ze sobą krzyżowane w celu uzyskania nowego potomka\n",
-    "* <b>mutate</b> - funkcja zwraca zmutowany (zmieniony) w niektórych miejsach gen danego osobnika\n",
-    "* <b>replace_population</b> - dodaje do populacji nowe potomne osobniki i sortuje ją rosnąco względem funkcji celu <br>\n",
+    "* <b>compute distance</b> - podaje odległość pomiędzy dwoma wybranymi miastami (punktami)<br>\n",
+    "* <b>route_length</b> - oblicza sumaryczną długość trasy obranej przez 'komiwojażera'<br>\n",
+    "* <b>calculate_fitness</b> - zwraca ujemną długość pokonanej przez 'sprzedawcę' trasy, która jest naszą funkcją celu do optymalizacji<br>\n",
+    "* <b>plot_route</b> - przedstawia obraną trasę pomiędzy miastami (punktami) na wykresie<br>\n",
+    "* <b>get_individual_route</b> - tworzy wektor z kolejnością odwiedzanych miast dla danego osobnika z populacji tzw. genotyp<br>\n",
+    "* <b>initial_population</b> - zwraca populację (posortowną rosnąco względem funkcji celu) w której każdy osobnik ma swoją trasę przejścia pomiędzy miastami<br>\n",
+    "* <b>get_parents</b> - wybiera najlepsze osobniki z populacji (z największą funkcją celu) na rodziców, po których potomstwo odziedziczy geny (kolejność odwiedzania miast)<br>\n",
+    "* <b>cross</b> - fragmenty genów rodziców są ze sobą krzyżowane w celu uzyskania nowego potomka<br>\n",
+    "* <b>mutate</b> - funkcja zwraca zmutowany (zmieniony) w niektórych miejsach gen danego osobnika<br>\n",
+    "* <b>replace_population</b> - dodaje do populacji nowe potomne osobniki i sortuje ją rosnąco względem funkcji celu<br>\n",
     "<b>Uwaga</b> ! W powyższym wyjaśnieniu przez osobnika z genotypem rozumiem wektor z kolejnością odwiedzania miast, a poprzez populację zbiór osobników."
    ],
    "id": "be3b4ee3953ea8e8"
